--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body {
 
 <footer class="w3-container w3-blue w3-center w3-margin-top">
   <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-  <a href="/review_form.html">Review a Professor</a>
+  <a href="/review_form">Review a Professor</a>
 </footer>
 
 </body>
