--- a/thanks.html
+++ b/thanks.html
@@ -3,5 +3,7 @@
   <head> </head>
   <body>
     <h1>Thank You for Your Review</h1>
+    <a href="/results">View Ratings</a>
+    <a href="/index">HomePage</a>
   </body>
 </html>
