moved the review prof button and had review open in a new tab

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 
 <div class="topnav">
   <a href="#home">Princeton Professors</a>
-  <b class= "hover" href="/review_form">Review a Professor</b>
+  <a class= "hover" target="_blank" href="/review_form">Review a Professor</a>
   <b class="hover">kw2689</b>
 </div>
 
@@ -73,7 +73,6 @@ body {
         </div>
         <div class="w3-container">
           <br>
-          <a href="/review_form">Review a Professor</a>
           <div>
             <input type="text" placeholder="Search..">
           </div>
