--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,6 @@
   <head> </head>
   <body>
     <h1>Thank You for Your Review</h1>
-    <a href="/results">View Ratings</a>
-    <a href="/index">HomePage</a>
+    <a href="/index">Go back to the homepage</a>
   </body>
 </html>
