--- a/thanks.html
+++ b/thanks.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-      function closeTab() {
-        window.close(); // Close the current tab
-      }
-    </script>
   </head>
   <body>
     <h1>Thank You for Your Review</h1>
-    <a href="/index" onclick="closeTab()">Close this tab.</a>
+    <a href="/index">Go back to the homepage.</a>
   </body>
 </html>
