--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@ body {
           </div>
           {% for prof in professors: %}
           <div class="w3-container">
-            <h6 class="w3-opacity"><b><input class="profName" type="button" value={{prof.name}} /></b></h6> 
-            <p><b>Dept:</b> {{ prof.department }} • <b>Rating: </b> {{ prof.rating }}</p>
+            <div class="profName w3-container" prof-value={{prof.name}}>
+              <h6 class="w3-opacity"><b>{{prof.name}}</b></h6>
+              <p><b>Dept:</b> {{ prof.department }} • <b>Rating: </b> {{ prof.rating }}</p>
+            </div>
             <hr>
           </div>
           {% endfor %}
@@ -155,7 +157,8 @@ body {
 
   function setup() {
           $('.profName').click(function() {
-            var name = $(this).val();
+            var name = $(this).attr('prof-value');
+            console.log(name)
             getResults(name)
           });
         }
