--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@ body {
   color: black;
 }
 
+.topnav .hover:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
+}
+
+.profName:hover {
+  background-color: #ddd;
+  color: black;
 }
 
 </style>
@@ -90,8 +100,8 @@ body {
             <div class="profName w3-container" prof-value={{prof.name}}>
               <h3 class="w3-opacity"><b>{{prof.name.capitalize()}}</b></h3>
               <p><b>Dept:</b> {{ prof.department.upper() }} • <b>Rating: </b> {{ prof.rating }}</p>
-              <hr>
             </div>
+            <hr>
           {% endfor %}
         </div>
       </div><br>
