--- a/review.html
+++ b/review.html
@@ -82,27 +82,27 @@ body {
                     </select>
                     <br>
                     Professor Department: 
-                    <input type="text" name="dept"/>
+                    <input type="text" name="dept" required/>
                     <br>
                     Quality of Content
-                    <input type="number" name="content" min="0" max="5" step="0.1"/>
+                    <input type="number" name="content" min="0" max="5" step="0.1" required/>
                     <br>
                     Quality of Delivery
-                    <input type="number" name="delivery" min="0" max="5" step="0.1"/>
+                    <input type="number" name="delivery" min="0" max="5" step="0.1" required/>
                     <br>
                     Level of Availability
-                    <input type="number" name="availability" min="0" max="5" step="0.1"/>
+                    <input type="number" name="availability" min="0" max="5" step="0.1" required/>
                     <br>
                     Level of Organization
-                    <input type="number" name="organization" min="0" max="5" step="0.1"/>
+                    <input type="number" name="organization" min="0" max="5" step="0.1" required/>
                     <br>
                     Any Comments?
-                    <input type="text" name="comment"/>
+                    <input type="text" name="comment" value=""/>
                     <br>
                     Courses taken with this Professor
-                    <input type="text" name="courses"/>
+                    <input type="text" name="courses" required/>
                     <br>
-                    <input type="submit" value="Submit" id="submitButton" />
+                    <input type="submit" value="Submit" id="submitButton"/>
                     <p></p>
                 </form>
         </div>
