properly implements search functionality

--- a/search_results.html
+++ b/search_results.html
@@ -8,3 +8,52 @@
 </div>
 <hr />
 {% endfor %}
+
+
+<!-- JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
+    
+<script>
+
+  'use strict'; 
+
+  function handleResponse(data) {
+    $('#resultsDiv').html(data);
+  }
+
+  function handleError() {
+    alert('Error: Failed to fetch data from server');
+  }
+
+  let request = null
+
+  function getResults(name) {
+    let encodedProfName = encodeURIComponent(name);
+
+    let url = '/prof_details?name=' + encodedProfName;
+
+    if (request !== null)
+      request.abort();
+      
+    let requestData = {
+      type: 'GET',
+      url: url,
+      success: handleResponse,
+      error: handleError
+    };
+    $.ajax(requestData);
+  }
+
+  function setup() {
+    $('.profName').click(function() {
+      var name = $(this).attr('prof-value');
+      console.log(name)
+      getResults(name)
+    });
+  }
+
+  $('document').ready(setup);
+</script>
+
+</body>
+</html>
