--- a/detailtable.html
+++ b/detailtable.html
@@ -16,7 +16,7 @@
             {%for review in reviews%}
               <div class="w3-container">
                 <!-- make for loop for all reviews  -->
-                <p>Overall Rating: </p> <!-- gonna have to add this  -->
+                <p>Overall Rating: {{review.rating}} </p> <!-- gonna have to add this  -->
                 <p>Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} / 5.0 | Availability {{review.availability}} / 5.0 | Organization {{review.organization}} / 5.0</p>
                 <p>{{review.comment}}</p>
                 <p>Courses taken with {{prof.name}}: {{review.comment}}</p>
