--- a/search_results.html
+++ b/search_results.html
@@ -2,7 +2,7 @@
 <div class="profName w3-container" prof-value="{{prof.name}}">
   <h3 class="w3-opacity"><b>{{prof.name.capitalize()}}</b></h3>
   <p>
-    <b>Dept:</b> {{ prof.department.upper() }} • <b>Rating: </b> {{ prof.rating
+    <b>Dept:</b> {{ prof.department.upper() }} • <b>Rating: </b> {{ prof.rating|round(2)
     }}
   </p>
 </div>
