front end. making dept a drop down list

--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@ body {
     <!-- Right Column -->
     <div class="w3-twothird" id="resultsDiv">
 
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16">Search to begin!</h2>
+      <div display="flex" align-items="center" class="w3-container ">
+        <center>
+          <h2 class="w3-text-grey w3-padding-16">Search to begin...</h2>
+        </center>
       </div>
     
     <!-- End Right Column -->
