fixing the comments

--- a/detailtable.html
+++ b/detailtable.html
@@ -18,7 +18,7 @@
                 <!-- make for loop for all reviews  -->
                 <p>Overall Rating: {{review.rating}} </p> <!-- gonna have to add this  -->
                 <p>Content: {{review.content}} / 5.0 | Delivery {{review.delivery}} / 5.0 | Availability {{review.availability}} / 5.0 | Organization {{review.organization}} / 5.0</p>
-                <p>{{review.comment}}</p>
+                <p>Comments: {{review.comment}}</p>
                 <p>Courses taken with {{prof.name}}: {{review.courses}}</p>
                 <hr>
               </div>
