Kayla Jacob Jonathan work session: fixing the bug to enable clicking on a professor with our new/updated database scheme

--- a/search_results.html
+++ b/search_results.html
@@ -1,5 +1,5 @@
 {% for prof in professors: %}
-<div class="profName w3-container" prof-name={{prof.name}} prof-dept={{prof.department}}>
+<div class="profName w3-container" prof-name="{{prof.name}}" prof-dept={{prof.department}}>
   <h3 class="w3-opacity"><b>{{prof.name.capitalize()}}</b></h3>
   <p>
     <b>Dept:</b> {{ prof.department.upper() }} • <b>Rating: </b> {{ prof.rating|round(2)
