--- a/review.html
+++ b/review.html
@@ -74,21 +74,16 @@ body {
               
                 <!-- Input boxes for searching -->
                 <form action="/review" method="get">
-                    Professor Name:
-                    <select id="professorDropdown" name="name" onchange="getProfDept()">
-                      <option value="" selected>Select...</option>
+
+                    Professor: 
+                    <input list="professorList" id="professorChoice" name="professor"/>
+                    <datalist id="professorList">
                       {% for prof in profs: %}
-                      <option value={{prof.name}}>{{prof.name.capitalize()}}</option>
+                      <option value="{{prof.name}}, {{prof.department}}">{{prof.name.capitalize()}} {{prof.department}}</option>
                       {% endfor %}
-                    </select>
-                    <br>
-                    Professor Department: 
-                    <select id="departmentDropdown">   
-                      <option value="" selected>Select...</option>
-                      {% for prof in profs: %}
-                      <option value={{prof.department}}>{{prof.department}}</option>
-                      {% endfor %}
-                    </select>
+                    </datalist>
+                    
+
                     <br>
                     Quality of Content
                     <input type="number" name="content" min="0" max="5" step="0.1" required/>
