--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ body {
 
 <footer class="w3-container w3-blue w3-center w3-margin-top">
   <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
+  <a target="childWindow" href="/adminpage">Admin controls</a>
 </footer>
 
 <!-- JS -->
