added username to page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
 <div class="topnav">
   <a href="#home">Princeton Professors</a>
   <a class= "hover" href="/review_form">Review a Professor</a>
-  <b class="hover">kw2689</b>
+  <b class="hover">{{username}}</b>
 </div>
 
   <!-- The Grid -->
