--- a/admintable.html
+++ b/admintable.html
@@ -1,6 +1,6 @@
-<script src="path/to/jquery.min.js"></script> <!-- Include jQuery if not already included -->
-<script src="path/to/db_utils.js"></script>
-<script src="path/to/main.js"></script>
+<!-- <script src="path/to/jquery.min.js"></script> Include jQuery if not already included -->
+<!-- <script src="path/to/db_utils.js"></script>
+<script src="path/to/main.js"></script> -->
 
 <table class="table table-striped">
     {% for review in reviews %}
@@ -16,3 +16,29 @@
     </div>
   {% endfor %}
 </table>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
+<script>
+
+  'use strict'; 
+
+  function handleDeleteResponse(data) {
+    location.reload();
+  }
+
+  function handleError() {
+    alert('Error: Failed to fetch data from server');
+  }
+
+  function deleteReview(reviewId) {
+    let url = "/delete_review?reviewId=" + reviewId;
+
+    let deleteRequestData = {
+      type: "DELETE",
+      url: url,
+      success: handleDeleteResponse,
+      error: handleError,
+    };
+    $.ajax(deleteRequestData);
+  }
+</script>
