--- a/admintable.html
+++ b/admintable.html
@@ -1,8 +1,38 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Admin Controls</title>
+        <meta name="viewport"
+        content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href=
+ "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+
+        <style>
+            .header, .footer {background-color:#06839a; color:white}
+        </style>
+
+    </head>
+
+    <body>
+        <div class="container-fluid header">
+            <center>
+                <h1>Admin Control Panel</h1>
+            </center>
+        </div>
 <!-- <script src="path/to/jquery.min.js"></script> Include jQuery if not already included -->
 <!-- <script src="path/to/db_utils.js"></script>
 <script src="path/to/main.js"></script> -->
-
+<h3>Displaying all reviews for {{profname}}:</h3>
 <table class="table table-striped">
+
+    {% if not reviews %}
+    {{profname}} does not have any reviews!
+    <hr>
+
+    {% else %}
+
     {% for review in reviews %}
     <div class="w3-container">
       <!-- make for loop for all reviews  -->
@@ -14,8 +44,16 @@
       <button onclick="deleteReview('{{review.reviewId}}', '{{profname}}', '{{profdept}}')">Delete</button>
       <hr>
     </div>
-  {% endfor %}
+    {% endfor %}
+    {% endif %}
+    <a href="/adminpage">Go back to all professors</a>
 </table>
+
+<div class="container-fluid footer">
+    <center>
+        <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
+    </center>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
 <script>
