--- a/detailtable.html
+++ b/detailtable.html
@@ -2,7 +2,11 @@
     <html>
 
     {% if not reviews %}
-    <h3> No Reviews Added Yet</h3>
+    <div class="container-fluid px-2.5">
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+          No reviews added yet!
+        </div>
+    </div>
 
     {% else %}
     <div class="container-fluid px-2.5">
