--- a/detailtable.html
+++ b/detailtable.html
@@ -2,25 +2,23 @@
     <html>
 
     {% if not reviews %}
-    <div class="container-fluid px-2.5">
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-          No reviews added yet!
-        </div>
+    <div class="container-fluid px-2.5" style="height: 100vh; display: flex; justify-content: center; align-items: center; background-color: white;">
+      <div>
+        <h3>No reviews added yet!</h3>
+      </div>
     </div>
 
     {% else %}
     <div class="container-fluid px-2.5">
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <div class="w3-container w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-star-o fa-fw w3-margin-right w3-xxlarge w3-text-yellow"></i>{{prof.name}}</h2>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>Department: {{prof.department}}</b></h5>
-              <h6 class="w3-text-blue"></i>Past Courses: {{reviews[0].courses}}</h6> <!-- leaving this for now but gonna need all the courses they've taught from the registrar-->
-              <hr>
-            </div>
-            <p></p>
-          </div>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>Department: {{prof.department}}</b></h5>
+                <h6 class="w3-text-blue"></i>Past Courses: {{reviews[0].courses}}</h6> <!-- leaving this for now but gonna need all the courses they've taught from the registrar-->
+                <hr>
+              </div>
+              <p></p>
           
-          <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-comments fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Student Feedback:</h2>
             {%for review in reviews%}
               <div class="w3-container">
