--- a/search_results.html
+++ b/search_results.html
@@ -27,7 +27,7 @@
 
   let request = null
 
-  function getResults(name, dept) {
+  function getResults(name, dept, rating) {
     let encodedProfName = encodeURIComponent(name);
     let encodedProfDept = encodeURIComponent(dept);
 
