--- a/adminpage.html
+++ b/adminpage.html
@@ -1,51 +1,71 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>Admin Controls</title>
-        <meta name="viewport"
-        content="width=device-width, initial-scale=1">
+  <head>
+    <title>Admin Controls</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href=
- "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
 
+    <style>
+      .header,
+      .footer {
+        background-color: #06839a;
+        color: white;
+      }
+    </style>
+  </head>
 
-        <style>
-            .header, .footer {background-color:#06839a; color:white}
-        </style>
-
-    </head>
-
-    <body>
-        <div class="container-fluid header">
-            <center>
-                <h1>Admin Control Panel</h1>
-            </center>
-                    <div class="row">
-                        <div class="search col-sm-3">
-                            <input type="text" id="adminsearchInput" placeholder="Search for a professor..." autofocus>
-                        </div>
-                    </div>
-            <br>
+  <body>
+    <div class="container-fluid header">
+      <center>
+        <h1>Admin Control Panel</h1>
+      </center>
+      <div class="row">
+        <div class="search col-sm-3">
+          <input
+            type="text"
+            id="adminsearchInput"
+            placeholder="Search for a professor..."
+            autofocus
+          />
         </div>
+      </div>
+      <br />
+    </div>
+    {% if not is_admin: %} 
+        You cannot access this page. 
+    {% else %}
         <table class="table table-striped">
-            {% for prof in profs %}
-            <tr>
-                <td><a target="childWindow" href="/adminpagetable?profname={{prof.name}}&profdept={{prof.department}}">{{prof.name}} ({{prof.department}})</a></td> 
-            </tr>
-            {% endfor %}
+        {% for prof in profs %}
+        <tr>
+            <td>
+            <a
+                target="childWindow"
+                href="/adminpagetable?profname={{prof.name}}&profdept={{prof.department}}"
+                >{{prof.name}} ({{prof.department}})</a
+            >
+            </td>
+        </tr>
+        {% endfor %}
         </table>
+    {% endif %}
 
-        <div class="container-fluid footer">
-            <center>
-                <p>Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla Waitman</p>
-            </center>
-        </div>
+    <div class="container-fluid footer">
+      <center>
+        <p>
+          Created by Eden Bendory, Jacob Colchamiro, Jonathan Mindel, Kayla
+          Waitman
+        </p>
+      </center>
+    </div>
 
-        <script src=
-"https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
-        </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <!-- <script>
+    <!-- <script>
             'use strict'
                     function handleSearchResponse(data) {
             $('#searchResultsDiv').html(data);
@@ -88,7 +108,7 @@
             $('document').ready(searchSetup);
         </script> -->
 
-        <!-- <script>
+    <!-- <script>
 
             'use strict';
 
@@ -136,5 +156,5 @@
             $('document').ready(setup);
 
         </script> -->
-    </body>
+  </body>
 </html>
