--- a/search_results.html
+++ b/search_results.html
@@ -1,6 +1,6 @@
 {% for prof in professors: %}
 <div class="profName w3-container" prof-name="{{prof.name}}" prof-dept={{prof.department}} onclick="getResults('{{prof.name}}', '{{prof.department}}')">
-  <h3 class="w3-opacity"><b>{{prof.name.capitalize()}}</b></h3>
+  <h3 class="w3-opacity"><b>{{prof.name.title()}}</b></h3>
   <p>
     <b>Dept:</b> {{ prof.department.upper() }} • <b>Rating: </b> {{ prof.rating|round(2)
     }}
